project("codeforces")

add_executable(0071a 0071a.cpp)
add_executable(0129a 0129a.cpp)
add_executable(0202a 0202a.cpp)
add_executable(0279b 0279b.cpp)
add_executable(0510a 0510a.cpp)
add_executable(0734a 0734a.cpp)
add_executable(1296b 1296b.cpp)
add_executable(1366a 1366a.cpp)
add_executable(1367b 1367b.cpp)
add_executable(1722c 1722c.cpp)
add_executable(1867a 1867a.cpp)
add_executable(1873d 1873d.cpp)
add_executable(1898b 1898b.cpp)
add_executable(1909a 1909a.cpp)
add_executable(1909b 1909b.cpp)
add_executable(1909c 1909c.cpp)
add_executable(1913a 1913a.cpp)
add_executable(1914b 1914b.cpp)

